[Silver III] Title: 회전하는 큐, Time: 104 ms, Memory: 14204 KB -BaekjoonHub